--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap"
       rel="stylesheet"
     />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="No Katakana Game" content="A game for speakers of Japanese" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
